Bug 326932: Triple-click paragraph selection doesn't work correctly in paragraphs containing form controls. r+sr=roc